# PdS-Polito2023

./: .gitignore  README.md
Labs/Lab1/capitalize/src/: main.rs
Labs/Lab1/luhn/src/: lib.rs  main.rs
Labs/Lab1/minesweeper/: .gitignore  Cargo.toml
Labs/Lab1/minesweeper/src/: lib.rs  main.rs
Labs/Lab2/es1/: Cargo.toml  main.c  read_out.c  structs.h  verify.fish  verify.ps1
Labs/Lab2/es1/binary_io/: Cargo.toml
Labs/Lab2/es1/binary_io/binary_io_derive/: Cargo.toml
Labs/Lab2/es1/binary_io/src/: lib.rs
Labs/Lab2/es1/src/: main.rs
Labs/Lab2/es2/: Cargo.toml
Labs/Lab2/es2/src/: lib.rs
Labs/Lab2/es2/src/consumer/src/: main.rs
Labs/Lab2/es2/src/producer/src/: main.rs
Labs/Lab2/es3/src/: lib.rs  main.rs
Labs/Lab2/es3/tests/: dirinfo.rs
Labs/Lab2/es3mod/src/: common.rs  dir.rs  file.rs  lib.rs  main.rs  node.rs
Labs/Lab2/es3mod/tests/: dirinfo.rs
Labs/Lab3/es1/circular-buffer/: Cargo.toml
Labs/Lab3/es1/circular-buffer/src/: lib.rs
Labs/Lab3/es2/src/: lib.rs
Labs/Lab3/es2/tests/: es2.rs
Labs/Lab3/es3/: Cargo.toml
Labs/Lab3/es3/src/: lib.rs  main.rs
Labs/Lab3/es3/tests/: es3.rs
Labs/Lab4/es1/: Cargo.toml  exercise.md
Labs/Lab4/es1/src/: main.rs
Labs/Lab4/es2/: Cargo.toml
Labs/Lab4/es2/src/: lib.rs  main.rs
Labs/Lab4/es3/: Cargo.toml
Labs/Lab4/es3/src/: lib.rs  main.rs
Labs/Lab4/es5/: Cargo.toml
Labs/Lab4/es5/src/: main.rs
Labs/Lab4/es6/: Cargo.toml  exercise.md
Labs/Lab4/es6/src/: main.rs
Labs/Lab5/es1/: Cargo.toml
Labs/Lab5/es1/src/: analyzer.rs  lib.rs  main.rs
tests/src/: main.rs
(+4 files in other folders)
