[package]
name = "es1"
version = "0.1.0"
edition = "2021"
default-run = "scanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scanner"
path = "src/main.rs"

[[bin]]
name = "analyzer"
path = "src/analyzer.rs"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
walkdir = "2.3.3"
